--- a/.github/workflows/deploy_protected.yml
+++ b/.github/workflows/deploy_protected.yml
@@ -14,9 +14,8 @@ on:
 
 jobs:
   dockerhub:
-    # https://github.com/marketplace/actions/publish-docker
     name: Deploy Dockerhub
-
+    if: github.repository_owner == 'AMICI-dev'
     runs-on: ubuntu-22.04
 
     strategy:
@@ -31,9 +30,9 @@ jobs:
     - uses: actions/checkout@v4
     - run: git archive -o container/amici.tar.gz --format=tar.gz HEAD
     - name: Set up QEMU
-      uses: docker/setup-qemu-action@v2
+      uses: docker/setup-qemu-action@v3
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      uses: docker/setup-buildx-action@v3
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@v4
       with:
