--- a/.github/workflows/test_install.yml
+++ b/.github/workflows/test_install.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [3.9]
+        python-version: ["3.11"]
 
     steps:
     - name: Set up Python ${{ matrix.python-version }}
@@ -50,7 +50,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [3.9]
+        python-version: ["3.11"]
 
     steps:
     - name: Set up Python ${{ matrix.python-version }}
@@ -83,7 +83,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [3.9]
+        python-version: ["3.11"]
 
     steps:
     - name: Set up Python ${{ matrix.python-version }}
