--- a/.github/workflows/test_python_cplusplus.yml
+++ b/.github/workflows/test_python_cplusplus.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [ "3.9" ]
+        python-version: [ "3.11" ]
 
     steps:
     - name: Cache
@@ -117,7 +117,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [ "3.9" ]
+        python-version: [ "3.10" ]
 
     steps:
     - name: Set up Python ${{ matrix.python-version }}
@@ -193,7 +193,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [ "3.9" ]
+        python-version: [ "3.11" ]
 
     steps:
     - name: Set up Python ${{ matrix.python-version }}
@@ -233,7 +233,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: 3.9
+        python-version: "3.11"
 
     - uses: actions/checkout@v4
     - run: git fetch --prune --unshallow
@@ -282,7 +282,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: 3.9
+        python-version: "3.11"
 
     - uses: actions/checkout@v4
     - run: git fetch --prune --unshallow
