--- a/python/sdist/setup.cfg
+++ b/python/sdist/setup.cfg
@@ -52,6 +52,8 @@ pysb = pysb>=1.13.1
 jax =
     jax
     diffrax
+    equinox
+    optimistix
 test =
     benchmark_models_petab @ git+https://github.com/Benchmarking-Initiative/Benchmark-Models-PEtab.git@master#subdirectory=src/python
     h5py
